--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,6 @@ body {
 }
 
 .secTopBrand {
-	height: 92px;
 	border-left: 12px solid #f16d7f;
 	padding-left: 12px;
 }
@@ -166,7 +165,7 @@ body {
     justify-content: space-between;
 }
 
-.mainContTop > div {
+.mainContTop > section {
 	position: relative;
 }
 
@@ -336,6 +335,7 @@ img[alt="cart_fon"] {
 .secBotOffer h2 span {
 	color: #f16d7f;
 	margin-left: 10px;
+	font-size: 48px;
 }
 
 .secBotOffer h3 {
@@ -351,9 +351,7 @@ img[alt="cart_fon"] {
 }
 
 .botRightTop, .botRightMiddle, .botRightBottom {
-	width: 295px;
-	height: 105px;
-	padding: 48px 43px 0 35px;
+	padding: 48px 40px 0 35px;
 }
 
 img[alt="delivery"], img[alt="discounts"], img[alt="quality"] {
@@ -432,7 +430,7 @@ img[alt="delivery"], img[alt="discounts"], img[alt="quality"] {
 	letter-spacing: 0.3px;
 }
 
-.bdr1, .brd2, .brd3 {
+.brd1, .brd2, .brd3 {
 	width: 38px;
 	height: 4px;
 	background-color: #d6d6d6;
@@ -443,7 +441,7 @@ img[alt="delivery"], img[alt="discounts"], img[alt="quality"] {
 	margin: 0 13px 0 13px;
 }
 
-.brd2:hover {
+.brd1:hover, .brd2:hover, .brd3:hover {
 	background-color: #f16d7f;
 }
 
@@ -553,8 +551,6 @@ img[alt="delivery"], img[alt="discounts"], img[alt="quality"] {
 	font-size: 16px;
 	font-weight: 400;
 	letter-spacing: 0.4px;
-	line-height: 59px;
-	letter-spacing: 0.4px;
 	line-height: 42px;
 	display: block;
 }
@@ -597,17 +593,18 @@ img[alt="delivery"], img[alt="discounts"], img[alt="quality"] {
 	line-height: 33px;
 }
 
-.toilsTwit a:hover {
-	color: #f7f7f8;
+.footerToils:hover {
+	background-color: #f16d7f;
+}
+
+.footerToils a i:hover {
+	color: #fff;
 }
 
 .footerToils:not(:last-child) {
 	margin-right: 8px;
 }
 
-.toilsTwit:hover {
-	background-color: #f16d7f;		
-}
 
 
 
