Внесены исправления в стили

--- a/css/style.css
+++ b/css/style.css
@@ -355,6 +355,9 @@ body {
     display: flex;
     align-items: center;
     margin-top: 30px; }
+    @media (max-width: 330px) {
+      .subTxt .subForm {
+        margin-top: 5px; } }
     .subTxt .subForm input {
       width: 280px;
       height: inherit;
@@ -391,7 +394,6 @@ body {
   @media (max-width: 992px) {
     .footerTop {
       flex-direction: column;
-      align-items: center;
       margin-top: 20px; } }
   .footerTop .brand {
     width: 430px; }
