--- a/css/style.scss
+++ b/css/style.scss
@@ -310,7 +310,7 @@ body {
     			@media (max-width: 1100px) {
 					flex-wrap: wrap;
 					height: auto;
-					padding: 0 15px;
+					padding: 0 14px;
 				}
 
 				.trend {
@@ -633,13 +633,6 @@ body {
 		}
 	}
 	
-    /*@media(max-width: 1200px) {
-    	flex-wrap: wrap;
-    	height: auto;
-    	padding: 15px;
-    	margin-top: 30px;
-    }*/
-
 	.infoProductSec {
 		max-width: 310px;
 		color: #fbfbfb;
@@ -700,7 +693,7 @@ body {
     			max-width: 423px;
 
     			@media(max-width: 550px) {
-    				padding-left: 0px;
+    				padding-left: 0;
     			}
 			}
 
@@ -748,8 +741,8 @@ body {
 		width: 400px;
 		text-align: center;
 
-		@media(max-width: 400px) {
-			width: auto;
+		@media(max-width: 991px) {
+			min-width: 290px;
 		}
 
 		h3 {
